RD-2007-02-01-0: Bugfix:      fixed man page creation
                 Review:      RH

PJ-2007-01-25-0: Bugfix:      sgedbwriter -debug  does not create the dbwriter.pid
                              file when suspend=y in -Xrunjdwp option
                 Bugster:     6439438
                 Changed:     dbwriter
                 Review:      RH

RD-2007-01-23-0: CVS        Created V60u10_TAG
----------------------------------------------

RH-2007-01-10-0: Bugfix:      rollback of bugfix 6506690. Did not work for
                              for postgres
                 Review:      AA

RH-2007-01-09-0: Bugfix:      reading test configuration from file did
                              not work
                 Review:      JG

AP-2007-01-03-0: Bugfix:      dbwriter should not use autocommit mode
                 Bug-Id:      6506690
                 Issue:       2139
                 Changed:     dbwriter
                 Review:      AA

AA-2006-01-02-0: Bugfix:      - broken build due to missing files in V60_ARCO_BRANCH

JO-2006-12-20-0: Bugfix:      A symbol character in table heading name causes 
                              an unexpected error
                 Bug-Id:      6469715
                 Changed:     reporting
                 Review:      RH

AA-2006-12-12-1: Cleanup      - Removed obsolete www dir in branch
AA-2006-12-12-0: Cleanup:     - Readd of repository in branch
------------------------------------------------------------------------------
AA-2006-12-08-0: Cleanup:     - branding
                              - removal of obsolete files

AA-2006-12-07-0: Cleanup:     - removal of doc dir

AA-2006-12-04-0: Cleanup:     - removal of jtestcase dependency
                              - additional copyrights
                              - build files

JG-2006-11-27-0: Bugfix:      Some columns in the ARCo database were too small.
                 Bug-id:      6439443
                              Fixed retrieval from sge_version table.