@@ -2,14 +2,14 @@ Source Code Review Form
 =======================
 (version 1.3)
 
-Date: 2006-12-20
+Date: 2007-02-05
 
 1 Identification
 
-jo-2006-12-20-0: Bugfix:      A symbol character in table heading name causes an unexpected error
-                 Bug-Id:      6469715
+JO-2007-02-05-0: Bugfix:      Save button is not enabled after ANY modification
+                 Bug-Id:      6511013
                  Changed:     reporting
-                 Review:      
+                 Review:      RH
 
 2 Conforms to specification
 
@@ -70,7 +70,7 @@ jo-2006-12-20-0: Bugfix:      A symbol character in table heading name causes an
 5.1 [x] no - comment: does not apply
 
 5.2 Manual tests
-Description: tested various simple and advanced query that contained the special characters.
+Description: changed various parameters of graphic view
 Successfull execution
 5.2 [x] yes
 5.2 [ ] no - comment:
@@ -98,5 +98,3 @@ Successfull execution
 7 Accepted
 7 [ ] yes
 7 [ ] no - comment:
-
-
