@@ -1,3 +1,8 @@
+JO-2007-02-05-0: Bugfix:      Save button is not enabled after ANY modification
+                 Bug-Id:      6511013
+                 Changed:     reporting
+                 Review:      RH
+
 RD-2007-02-01-0: Bugfix:      fixed man page creation
                  Review:      RH
 
